feat: implemented firts route to add user
